--- a/Memoria/abstract.tex
+++ b/Memoria/abstract.tex
@@ -1,14 +1,15 @@
 \chapter{Abstract}
 %\thispagestyle {empty}
 
-	Nowadays the world of ecommerce is living its own golden age. Companies such as Amazon are reporting net incomes around the 100.000 million dollar value in online sales, with 300 million customers around the globe.\\
+	Nowadays, the world of e-commerce is living its own golden age. Online companies are increasing their incomes every year. For instance, 
+	Amazon is reporting net incomes around 100.000 million dollar value in online sales, with 300 million customers around the globe.\\
 
-	One of the gaps of these online platforms is the inability to allow customers to save information of a product they're interested in, in order to subsequently consult it. Currently and generally speaking, once the details of a product have been printed or saved in a document in PDF format, for instance, the information is not rendered in the most arranged way as frequently, irrelevant HTML elements that have little to do with the product are displayed in between. This is normally due to the platform administrator lacking an easy means to modify how the appearance of the information will be stored, and this results in them having a dependancy on programming experts in order to provide more user friendly layouts. \\
-	As a side note, some online vendors are also able to reach out to customers through physical stores, and a challenge they often face is the ability to generate an up-to-date PDF of their complete catalog in order to enhance and level up the shopping experience of all types of their clientele.\\
+	One of the gaps of these online platforms is the inability to allow customers to save information of a product they are interested in, in order to subsequently consult it. Currently and generally speaking, when the details of a product are printed or saved in a document in PDF format, they are not usually rendered in the best way since, frecuently, irrelevant HTML elements that have little to do with the product are displayed in between. This is normally due to the lack of easy ways for the administrator to modify how the appearance of the information will be stored, and thus, it results in a dependency in programmers in order to provide nice layouts. \\
+	As a side note, some online vendors are also able to reach out customers through physical stores, and a challenge they often face is the ability to generate an up-to-date PDF of their complete catalog in order to enhance and level up the shopping experience of all types of their customers.\\
 
-	As a way to mend this handicap and enhance users' experience while shopping online, the objective of this project is to develop an independant module that can easily be plugged into an ecommerce platform and allow its administrators the possibility of designing templates for the rendering of their catalog. With this functionality, users may be able to easily save the details of a product and later be able to examine it.\\
-	For the development of this End of Master's Project, Drupal platform and its extension for ecommerce Ubercart have been leveraged.
+	As a way to overtake this drawback and enhance the experience of the users while shopping online, the objective of this project is to develop an independant module that can easily be plugged into an e-commerce platform and allow its administrators the possibility of designing templates for the rendering of their catalog. With this functionality, users may be able to easily save the details of a product and later be able to examine it.\\
+	For the development of this project, Drupal platform and its extension for e-commerce Ubercart have been selected.
 
 \vspace{1cm}
 {\textcolor{blue}{\large\bf KEYWORDS}}\\
-E-commerce, PDF, Module, Drupal, Catalog, Product
+E-commerce, PDF, Drupal, Catalog, Product
