--- a/Memoria/acronimos.tex
+++ b/Memoria/acronimos.tex
@@ -1,39 +1,43 @@
 \chapter*{Lista de acrónimos}
-\acrodef{TFM}{Trabajo Fin de Máster}
-\textbf{TFM:} Trabajo Fin de Máster
+\begin{itemize}
+	
+	\item \acrodef{CSS}{\textit{Cascading Style Sheets}}
+	\textbf{CSS:} \textit{Cascading Style Sheets}
+	
+	\item \acrodef{CMS}{\textit{Content Management System}}
+	\textbf{CMS:} \textit{Content Management System}
+	
+	\item \acrodef{DOM}{\textit{Document Object Model}}
+	\textbf{DOM:} \textit{Document Object Model}
+	
+	\item \acrodef{FTP}{\textit{File Transfer Protocol}}
+	\textbf{FTP:} \textit{File Transfer Protocol}
+	
+	\item \acrodef{HTML}{\textit{Hypertext Markup Language}}
+	\textbf{HTML:} \textit{HyperText Markup Language}
+	
+	\item \acrodef{HTTP}{\textit{Hypertext Transfer Protocol}}
+	\textbf{HTTP:} \textit{Hypertext Transfer Protocol}
+	
+	\item \acrodef{JSON}{\textit{Javascript Object Notation}}
+	\textbf{JSON:} \textit{Javascript Object Notation}
+	
+	\item \acrodef{LAMP}{Linux, Apache, MySQL, PHP}
+	\textbf{LAMP:} Linux, Apache, MySQL, PHP
+	
+	\item \acrodef{SPA}{\textit{Single-Page Applications}}
+	\textbf{SPA:} \textit{Single-Page Applications}
+	
+	\item \acrodef{SSH}{\textit{Secure SHell}}
+	\textbf{SSH:} \textit{Secure SHell}
+	
+	\item \acrodef{TFM}{Trabajo Fin de Máster}
+	\textbf{TFM:} Trabajo Fin de Máster
+	
+	\item \acrodef{W3C}{\textit{World Wide Web Consortium}}
+	\textbf{W3C:} \textit{World Wide Web Consortium}
 
-\acrodef{CMS}{Content Management System}
-\textbf{CMS:} Content Management System
-
-\acrodef{LAMP}{Linux, Apache, MySQL, PHP}
-\textbf{LAMP:} Linux, Apache, MySQL, PHP
-
-\acrodef{WAMP}{Windows, Apache, MySQL, PHP}
-\textbf{WAMP:} Windows, Apache, MySQL, PHP
-
-\acrodef{HTML}{Hypertext Markup Language}
-\textbf{HTML:} HyperText Markup Language
-
-\acrodef{CSS}{Cascading Style Sheets}
-\textbf{CSS:} Cascading Style Sheets
-
-\acrodef{W3C}{World Wide Web Consortium}
-\textbf{W3C:} World Wide Web Consortium
-
-\acrodef{JSON}{Javascript Object Notation}
-\textbf{JSON:} Javascript Object Notation
-
-\acrodef{SPA}{Single-Page Applications}
-\textbf{SPA:} Single-Page Applications
-
-\acrodef{DOM}{Document Object Model}
-\textbf{DOM:} Document Object Model
-
-\acrodef{HTTP}{Hypertext Transfer Protocol}
-\textbf{HTTP:} Hypertext Transfer Protocol
-
-\acrodef{FTP}{File Transfer Protocol}
-\textbf{FTP:} File Transfer Protocol
-
-\acrodef{SSH}{Secure SHell}
-\textbf{SSH:} Secure SHell
+	\item \acrodef{WAMP}{Windows, Apache, MySQL, PHP}
+	\textbf{WAMP:} Windows, Apache, MySQL, PHP
+	
+\end{itemize}
