--- a/Memoria/conclusiones.tex
+++ b/Memoria/conclusiones.tex
@@ -1,14 +1,17 @@
 \chapter{Conclusiones y trabajos futuros}
+En este capítulo se realiza un análisis del recorrido de este \ac{TFM} y se recogen las conclusiones obtenidas y las posibilidades de ampliación y mejora del mismo.
 
-Durante la realización de este \ac{TFM} se han integrado con éxito diversas tecnologías que trabajan en conjuto para lograr un objetivo. En este caso concreto, y a modo de recordatorio, el objetivo era la generación de documentos PDF a partir de la información obtenida de los productos de una plataforma de comercio electrónico y las plantillas que haya creado un usuario administrador. Bajo el punto de vista de los objetivos, se puede decir que el proyecto ha resultado un éxito ya que se cumplen tanto el objetivo general, como los objetivos específicos y se ha conseguido realizar una extensión para Drupal completamente funcional y exportable, aun partiendo de un nivel de conocimientos bajo en PHP y Drupal.\\
+\section{Conclusiones}
+Durante la realización de este \ac{TFM} se han integrado con éxito diversas tecnologías que trabajan en conjuto para lograr el objetivo principal del proyecto. En este caso concreto y, a modo de recordatorio, el objetivo era la generación de documentos PDF a partir de la información obtenida de los productos de una plataforma de comercio electrónico y las plantillas que haya creado un usuario administrador. Bajo el punto de vista de los objetivos, se puede decir que el proyecto ha resultado un éxito ya que se cumplen tanto el objetivo general, como los objetivos específicos y se ha conseguido realizar una extensión para Drupal completamente funcional y exportable, aun partiendo de un nivel de conocimientos bajo en PHP y Drupal.\\
 
 Con respecto a la metodología de trabajo utilizada, no se han encontrado mayores dificultades a la hora de aplicar el proceso Scrum al ámbito de un \ac{TFM}, en realidad no se requiere de la implementación de cambios mayores de la forma de trabajar en una colaboración tutor/alumno y se siente que es la forma de trabajar adecuada para un proyecto de estas características. El \textit{product backlog} es una gran herramienta ya que, incluso con el limitado tiempo con el que se ha contado en este caso, permite organizar el trabajo de manera rápida y sencilla, eligiendo que tareas se desempeñarán para cada entrega.\\
 
 Como se ha comentado, una dificultad encontrada ha sido el tiempo disponible. Habiendo dispuesto de más tiempo, se podría haber realizado una aplicación más sólida, con un diseño más atractivo y con más funcionalidades.\\
 
+\section{Trabajos futuros}
 Este proyecto podría ser continuado y extendido por otro alumno, tanto para un trabajo de una asignatura como para un proyecto propio, de modo que se proponen las siguientes mejoras:
 \begin{itemize}
-	\item Elegir de forma sencilla que elementos aparecen en una plantilla, ocultando los que no queremos mostrar.
+	\item Elegir de forma sencilla que elementos aparecen en una plantilla, ocultando los que no se quieren mostrar.
 	\item Generación de los elementos PDF genéricos. Actualmente funciona para los elementos básicos de un producto.
 	\item Adición de atributos de Ubercart a los documentos PDF. 
 	\item Permitir modificar la plantilla de producto dentro de un catálogo.
