--- a/Memoria/librero.bib
+++ b/Memoria/librero.bib
@@ -89,8 +89,8 @@
 }
 
 @Article{Misk09,
-	author    = {Mi?ko Hever},
-	title     = {\textit{Hello World, <angular/> is here}},
+	author    = {Misko Hever},
+	title     = {\textit{Hello World, angular is here}},
 	year      = {2009},
 	note      = {\url{http://misko.hevery.com/2009/09/28/hello-world-angular-is-here/}}
 }
