--- a/Memoria/metodologia.tex
+++ b/Memoria/metodologia.tex
@@ -6,17 +6,17 @@ Hoy en día el número de empresas y proyectos que fallan en su ejecución por una 
 
 Algunas de las ventajas de implantar una metodología bien definida son las siguiente:
 \begin{itemize}  
-	\item Permite realizar mejores estimaciones
-	\item Entregar sistemas estables
-	\item Mantener al usuario informado
-	\item Preveer futuras tareas
-	\item Gestión del riesgo identificando posibles problemas
-	\item Mejor gestión de tiempo
+	\item Permite realizar mejores estimaciones.
+	\item Entregar sistemas estables.
+	\item Mantener al usuario informado.
+	\item Preveer futuras tareas.
+	\item Gestión del riesgo identificando posibles problemas.
+	\item Mejor gestión de tiempo.
 \end{itemize}
 
 Cuando una metodología no se implementa correctamente, pueden surgir numerosos problemas. Por ejemplo, una pérdida de comunicación entre el cliente y el equipo de desarrollo lleva a desarrollar sistemas que no cumplen las expectativas del cliente. Además el mal uso de conceptos o procesos de una metodología de desarrollo conduce a menudo a desarrollar sistemas con numerosos defectos.\\
 
-Por otro lado, la calidad de vida del equipo humano también se ve afectada por la falta de uso de metodologías. Muchos desarrolladores sufren de falta de moral y motivación a causa de los continuos cambios de alcance o parches debidos a la falta de definición en las tareas.\cite{Seg15} Por el contrario, usando los procesos de desarrollo adecuados, se puede gestionar debidamente el alcance de un proyecto y evitar muchos problemas comunes de desarrollo \textit{software}. Siempre ocurrirán imprevistos, pero con una metodología adecuada, estos son de poco impacto y mínima ocurrencia.\\
+Por otro lado, la calidad de vida del equipo humano también se ve afectada por la falta de uso de metodologías. Muchos desarrolladores sufren de falta de moral y motivación a causa de los continuos cambios de alcance o parches debidos a la falta de definición en las tareas \cite{Seg15}. Por el contrario, usando los procesos de desarrollo adecuados, se puede gestionar debidamente el alcance de un proyecto y evitar muchos problemas comunes de desarrollo \textit{software}. Siempre ocurrirán imprevistos, pero con una metodología adecuada, estos son de poco impacto y mínima ocurrencia.\\
 
 No todas la metodologías de desarrollo funcionan con todos los proyectos. Elegir la adecuada también es uno de los retos que tienen que afrontar los desarrolladores. Algunas metodologías funcionan mejor con proyectos grandes y de larga duración, y otras son más adecuadas para proyectos medianos y pequeños con equipos de desarrollo más modestos. Sin embargo es un hecho que, aplicar una metodología de desarrollo a un proyecto, aumenta mucho las posibilidades de que termine con éxito.
 
@@ -26,25 +26,24 @@ Dentro de las metodologías de desarrollo \textit{software}, se puede encontrar u
 Las metodologías de desarrollo tradicionales se caracterizan por tener una serie secuencial de fases: requisitos, análisis, diseño, implementación, pruebas y despliegue. Primero, los requisitos del cliente son meticulosamente documentados. Después se analiza y diseña la arquitectura general del \textit{software} y en la siguiente fase comienza la implementación, finalizando con el período de pruebas y el despliegue. La idea principal es tener una visión completa del proyecto antes de su inicio y realizar la implementación de acuerdo al esquema planificado.\\
 Algunas características de este tipo de metodologías son:
 \begin{itemize}  
-	\item Desarrollo predictivo
-	\item Las decisiones se toman en las primeras fases del ciclo de vida y se especifican mediante modelos gráficos
-	\item Las decisiones se interpretan y materializan en la fase de desarrollo
-
-	\item Orientado a la documentación
-	\item Orientado al proceso
+	\item Desarrollo predictivo.
+	\item Las decisiones se toman en las primeras fases del ciclo de vida y se especifican mediante modelos gráficos.
+	\item Las decisiones se interpretan y materializan en la fase de desarrollo.
+	\item Orientado a la documentación.
+	\item Orientado al proceso.
 \end{itemize}
 
 Las metodologías ágiles son menos rigurosas a la hora de gestionar la documentanción. La clave reside en que el desarrollo se realiza de manera incremental e iterativa, en la que las fases de diseño se ejecutan una y otra vez. Como resultado, el \textit{software} deja ser tan rígido para convertirse en una estructura más orgánica con mayor interactividad entre sus componentes. Se le da mayor importancia a la adaptabilidad y a las pruebas de integración.
 Algunas características destacadas de este tipo de metodologías son:
 \begin{itemize}  
-	\item Preparado para soportar cambios
-	\item Desarrollo iterativo
-	\item Pruebas de integración
-	\item Orientado al código
-	\item Orientado a las personas
+	\item Preparado para soportar cambios.
+	\item Desarrollo iterativo.
+	\item Pruebas de integración.
+	\item Orientado al código.
+	\item Orientado a las personas.
 \end{itemize}
 
-En la tabla \ref{tab:tradvsagil} se presenta una comparativa entre las metodologías tradicionales y ágiles.
+En la Tabla \ref{tab:tradvsagil} se presenta una comparativa entre las metodologías tradicionales y ágiles.
 \begin{table}
 	\centering
 	\begin{tabular}{ | p{7cm} || p{7cm} |}
@@ -60,7 +59,7 @@ En la tabla \ref{tab:tradvsagil} se presenta una comparativa entre las metodolog
 		Plazos y costes son conocidos al principio & Ámbito y costes varían según evoluciona el proyecto \\ \hline
 		Proyecto bien documentado & La documentación no es prioritaria \\ \hline
 	\end{tabular}
-	\caption{Comparativa tradicionales vs ágiles}\label{tab:tradvsagil}
+	\caption{Comparativa procesos de desarrollo tradicionales vs ágiles}\label{tab:tradvsagil}
 \end{table}
 
 \section{Metodología escogida}
@@ -68,34 +67,34 @@ Se ha optado por implementar metodologías ágiles en este proyecto ya que, debido
 Al haber escogido esta metodología, no se requiere que todos los requisitos estén definidos al principio del proyecto, si no que se puede definir un conjunto básico de requisitos y en las revisiones añadir más o adaptarlos según se crea conveniente.
 
 \subsection{Scrum}
-Scrum es una metodología ágil, iterativa e incremental. Aunque fue creada por empresas dedicadas a productos tecnológicos, es posible adaptar la metodología a todo tipo de proyectos con requisitos inestables o cambiantes para otros negocios, como desarrollo de hardware, programas de marketing o iniciativas de equipos de ventas.\\
+Scrum es una metodología ágil, iterativa e incremental. Aunque fue creada por empresas dedicadas a productos tecnológicos, es posible adaptar la metodología a todo tipo de proyectos con requisitos inestables o cambiantes para otros negocios, como desarrollo de \textit{hardware}, programas de \textit{marketing} o iniciativas de equipos de ventas.\\
 En Scrum participa un equipo de trabajo multidisciplinar y autoorganizado que debe actuar como una unidad para alcanzar un objetivo común manteniendo una colaboración activa tanto de forma presencial como \textit{online}.\\
 Uno de los puntos clave de Scrum es la asunción de que el cliente cambiará de opinión sobre lo que quiere o necesita y que se presentarán retos impredecibles para los cuales una planificación previa no son suficientes. De este modo, la metodología implica que el problema no puede entenderse en su totalidad o ser totalmente definido previamente, de manera que se enfoca en maximizar la capacidad del equipo de realizar entregas rápidas y la adaptabilidad a nuevos requisitos y cambios, tanto del cliente como el mercado.\\
 
-Scrum es relativamente reciente. En 1986 Hirotaka Takeuchi e Ikujiro Nonaka presentaron el artículo ``New New Product Development Game'' para la Harvard Business Review centrándose en la innovación continua, icremental y en espiral\cite{Tak86}. Los autores describían una nueva aproximación al desarrollo comercial de productos, que llamaron la ``Aproximación rugby'', ya que todo el proceso es llevado a cabo por un equipo multifuncional a través de fases solapadas en dónde el equipo ``intenta avanzar como una unidad pasándose el balón hacia atrás y hacia delante''.\\
-En 1993 Ken Schwaber y Jeff Sutherland usaron, por primera vez, en sus empresas la aproximación propuesta por Hirotaka e Ikujiro, refiriéndose a ella como Scrum\cite{Jef04}. En 1995 Schwaber y Sutherland, presentaron su artículo ``The SCRUM Development Process'' en la conferencia OOPSLA (Texas), popularizando de este modo el término y abriendo nuevos horizontes a la expansión de la metodología.\cite{Jef95}
-Más tarde, en el año 2001, Schwaber trabajó con Mike Beedle para describir el método Scrum en el libro ``Agile Software Development with Scrum'' y en el año 2002 fundó junto con otros miembros, la Scrum Alliance, iniciando con ello las series de certificación en Scrum.\cite{Jef16}
+Scrum es relativamente reciente. En 1986 Hirotaka Takeuchi e Ikujiro Nonaka presentaron el artículo ``New New Product Development Game'' para la Harvard Business Review centrándose en la innovación continua, incremental y en espiral \cite{Tak86}. Los autores describían una nueva aproximación al desarrollo comercial de productos, que llamaron la ``aproximación rugby'', ya que todo el proceso es llevado a cabo por un equipo multifuncional a través de fases solapadas en dónde el equipo ``intenta avanzar como una unidad pasándose el balón hacia atrás y hacia delante''.\\
+En 1993 Ken Schwaber y Jeff Sutherland usaron, por primera vez, en sus empresas la aproximación propuesta por Hirotaka e Ikujiro, refiriéndose a ella como Scrum \cite{Jef04}. En 1995 Schwaber y Sutherland, presentaron su artículo ``The SCRUM Development Process'' en la conferencia OOPSLA (Texas), popularizando de este modo el término y abriendo nuevos horizontes a la expansión de la metodología \cite{Jef95}.
+Más tarde, en el año 2001, Schwaber trabajó con Mike Beedle para describir el método Scrum en el libro ``Agile Software Development with Scrum'' y en el año 2002 fundó junto con otros miembros, la Scrum Alliance, iniciando con ello las series de certificación en Scrum \cite{Jef16}.
 
 Las principales características de Scrum son las siguientes:
 \begin{itemize}  
-	\item Apropiada para proyectos con requisitos inestables o cambiantes
+	\item Apropiada para proyectos con requisitos inestables o cambiantes.
 	\item Equipo de trabajo multidisciplinar y autoorganizado.
 	\item Basado en un modelo de proceso iterativo y en los valores del manifiesto ágil.
 	\item La velocidad para el desarrollo de un producto está marcada por el eslabón que tiene la menor velocidad en el equipo.
-	\item Se destaca el trabajo en equipo, el aprendizaje constante y una estructura de desarrollo dinámico, flexible a los cambios durante el desarrollo
-	\item Los requisitos se expresan en forma de lista priorizada de características y capacidades del producto
-	\item La priorización se hace teniendo en cuenta el riesgo y el valor de negocio
-	\item Las características más importantes se abordan primero
-	\item Se realizan entregas iterativas del producto en ciclos cortos y fijos (time boxed)
-	\item La planificación es adaptativa. Solo se compromete la próxima entrega
-	\item Cada entrega contiene un conjunto de características completas que permiten ponerse en explotación
+	\item Se destaca el trabajo en equipo, el aprendizaje constante y una estructura de desarrollo dinámico, flexible a los cambios durante el desarrollo.
+	\item Los requisitos se expresan en forma de lista priorizada de características y capacidades del producto.
+	\item La priorización se hace teniendo en cuenta el riesgo y el valor de negocio.
+	\item Las características más importantes se abordan primero.
+	\item Se realizan entregas iterativas del producto en ciclos cortos y fijos (\textit{time boxed}).
+	\item La planificación es adaptativa. Solo se compromete la próxima entrega.
+	\item Cada entrega contiene un conjunto de características completas que permiten ponerse en explotación.
 \end{itemize}
 
 Para aplicar Scrum con eficiencia, el equipo de trabajo ideal se compone de entre 5 y 9 personas ya que se consigue un balance entre la dificultad de comunicación entre equipos mas grandes y los retrasos por imprevistos personales que puedan surgir en equipos más pequeños.
 En el equipo de trabajo se pueden encontrar los siguientes roles:
 \begin{itemize}  
 	\item \textit{Product Owner}:  es el jefe del producto y la persona que interactúa con el cliente para extraer los requisitos y sus prioridades y le representa en el equipo.
-	\item \textit{Scrum Master}: es el director del proyecto. Será el encargado de que se cumpla lo planificado en cada sprint.
+	\item \textit{Scrum Master}: es el director del proyecto. Será el encargado de que se cumpla lo planificado en cada \textit{sprint}.
 	\item \textit{Development Team}: programadores, diseñadores, personal de pruebas, etc.
 	\item Roles externos: usuarios, clientes, especialistas, etc.
 \end{itemize}
@@ -114,14 +113,14 @@ El equipo de trabajo lleva a cabo las diferentes actividades del proceso Scrum q
 \label{sec:scrumtfm}
 Como se ha comentado en la sección anterior, Scrum está pensado para equipos multidisciplinares en los que suele haber varios integrantes, por lo tanto no es posible aplicar la metodología con todas sus características, sino que hay que realizar una adaptación de las mismas.\\
 
-Se distribuyen los roles donde el tutor o tutores desempeñarán el rol de propietarios del producto, en conjunto el alumno y el tutor actuarán como \textit{Scrum Master} y el alumno como miembro del equipo. En un \ac{TFM} es el profesor el que suele conocer el dominio del problema y los alumnos los encargados de su desarrollo, de ahi la asignación de roles anteriormente propuesta, la labor del \textit{Scrum Master} se hace manera conjunta ya que no debe recaer por completo en el alumno (que actúa principalmente como desarrollador) ni en el profesor (que actúa como cliente).\\
+Se distribuyen los roles donde el tutor o tutores desempeñarán el rol de propietarios del producto, en conjunto el alumno y el tutor actuarán como \textit{Scrum Master} y el alumno como miembro del equipo. En un \ac{TFM} es el profesor el que suele conocer el dominio del problema y los alumnos los encargados de su desarrollo, de ahí la asignación de roles anteriormente propuesta. La labor del \textit{Scrum Master} se hace manera conjunta ya que no debe recaer por completo en el alumno (que actúa principalmente como desarrollador) ni en el profesor (que actúa como cliente).\\
 
 Además de la asignación de roles, se toman en cuenta las siguientes consideraciones:
 \begin{itemize}  
 	\item El tutor, al actuar como propietario, elabora la pila de producto.
 	\item En la primera reunión se fijan las primeras tareas, se planifican y se fija una fecha para que el alumno las realice.
-	\item En cada fecha de entrega de cada Sprint, el alumno realizará una pequeña exposición al tutor.
-	\item La división de las historias en tareas es opcional.
-	\item Ante la probale imposibilidad de llevar a cabo las \textit{Daily Scrum}, se propone el uso de recursos compartidos para que el profesor pueda comprobar las tareas diarias llevadas a cabo. Estos recursos pueden ser: blog, repositorio, carpetas en la nube...
+	\item En cada fecha de entrega de cada \textit{Sprint}, el alumno realizará una pequeña exposición al tutor.
+	\item La división de las historias en tareas, cuando ésta es única, es opcional.
+	\item Ante la probale imposibilidad de llevar a cabo las \textit{Daily Scrum}, se propone el uso de recursos compartidos para que el profesor pueda comprobar las tareas diarias llevadas a cabo. Estos recursos pueden ser: blog, repositorio, carpetas en la nube, etc.
 	\item La pizarra de Scrum puede ser virtual. Es posible usar soluciones \textit{online} de terceros.
 \end{itemize}
