--- a/Memoria/resumen.tex
+++ b/Memoria/resumen.tex
@@ -1,14 +1,14 @@
 \chapter{Resumen}
 %\thispagestyle {empty}
 
-    En la actualidad el mundo del comercio electrónico está viviendo una edad de oro. Empresas como Amazon obtienen al año más de 100.000 millones en ventas \textit{online} con alrededor de 300 millones de clientes en todo el mundo.\cite{Dav16}\\
+    En la actualidad el mundo del comercio electrónico está viviendo una edad de oro. Empresas como Amazon obtienen al año más de 100.000 millones en ventas \textit{online} con alrededor de 300 millones de clientes en todo el mundo \cite{Dav16}.\\
     
-    Uno de los problemas de las plataformas de comercio electrónico actuales, radica en que un cliente necesita, en ocasiones, guardar información sobre un producto para su posterior consulta, y, por lo general, la presentación que se obtiene al imprimir los productos mediante el navegador, por ejemplo en formato PDF, no es la más adecuada. En particular es habitual que el producto aparezca mezclado con elementos HTML de la página, que nada tienen que ver con el producto en sí. Un administrador de una plataforma de comercio electrónico, no suele contar con medios ni formación para poder modificar la presentación de sus productos a la hora de generar un documento, teniendo que recurrir a programadores especializados que realicen la maquetación de los mismos.\\
-    Otro problema relacionado con el anterior es que, pese a la gran inserción actual del comercio electrónico, muchos negocios online disponen también de tiendas físicas donde los clientes reclaman catálogos en papel. En este sentido, sería de utilidad poder generar un catálogo en PDF que incluya no solo un producto, sino el catálogo completo.\\
+    Uno de los problemas de las plataformas de comercio electrónico actuales radica en que un cliente necesita, en ocasiones, guardar información sobre un producto para su posterior consulta y, por lo general, la presentación que se obtiene al imprimir los productos mediante el navegador, por ejemplo en formato PDF, no es la más adecuada. En particular es habitual que el producto aparezca mezclado con elementos HTML de la página, que nada tienen que ver con el producto en sí. Un administrador de una plataforma de comercio electrónico, no suele contar con medios ni formación para poder modificar la presentación de sus productos a la hora de generar un documento, teniendo que recurrir a programadores especializados que realicen la maquetación de los mismos.\\
+    Otro problema relacionado con el anterior es que, pese a la gran inserción actual del comercio electrónico, muchos negocios \textit{online} disponen también de tiendas físicas donde los clientes reclaman catálogos en papel. En este sentido, sería de utilidad poder generar un catálogo en PDF que incluya no solo un producto, sino el catálogo completo.\\
     
-    Como respuesta a este problema, se propone realizar una extensión para una plataforma de comercio electrónico conocida con la que un administrador pueda crear plantillas de documentos PDF de forma rápida y sencilla de modo que un usuario pueda guardar la información de los productos en PDF de acuerdo a las mismas.\\ 
+    Como respuesta a este problema, se propone realizar una extensión para una plataforma de comercio electrónico conocida, con la que un administrador pueda crear plantillas de documentos PDF de forma rápida y sencilla, de modo que un usuario pueda guardar la información de los productos en PDF de acuerdo a las mismas.\\ 
     En concreto, para la realización de este Trabajo Fin de Máster, se ha escogido la plataforma Drupal junto con su extensión de comercio electrónico Ubercart.
     
 \vspace{1cm}
 {\textcolor{blue}{\large\bf PALABRAS CLAVE}}\\
-Comercio electrónico, PDF, Extensión, Drupal, Catálogo, Producto
+Comercio electrónico, PDF, Drupal, Catálogo, Producto
