--- a/Memoria/introduccion.tex
+++ b/Memoria/introduccion.tex
@@ -1,10 +1,10 @@
 \chapter{Introducción}
 
-En este documento se recoge la memoria del \ac{TFM} titulado ``Generación de catálogos en PDF para comercio electrónico''. En este capítulo se recoge la motivación del proyecto, la propuesta, los requisítos y las tecnologías utilizadas en el desarrollo.
+En este documento se recoge la memoria del \ac{TFM} titulado ``Generación de catálogos en PDF para comercio electrónico''. En este capítulo se recoge la motivación del proyecto, la propuesta, los requisitos y las tecnologías utilizadas en el desarrollo.
 
 \section {Motivación}
-El comercio electrónico tal y como lo conocemos hoy, consiste en la compra y venta de productos o servicios a través de medios electrónicos, como por ejemplo Internet. Con la llegada en masa de la red de redes a los hogares del mundo, se creó un nicho de mercado que en ese entonces estaba desaprovechado, como es el negocio de la venta \textit{online}. Aunque anteriormente ya existían otros sistemas de comercio electrónico, basados en televisión, teléfono o incluso a través de Internet, no fue hasta la llegada de Amazon\footnote{https://www.amazon.es/} e eBay\footnote{http://www.ebay.com/} que el comercio \textit{online} empezó a masificarse.
-A partir de este punto clave y, viendo el éxito que supone para un comercio satisfacer la demanda creciente de clientes de comercio electrónico, surgieron cada vez más plataformas que ofertaban productos y servicios por Internet, como Netflix\footnote{https://www.netflix.com/es/} (En sus inicios un servicio de alquiler de DVD con un sistema de reparto a domicilio), Alibaba.com\footnote{https://www.alibaba.com/} (parecido a Amazon pero para el mercado chino) y Zappos\footnote{http://www.zappos.com/} (plataforma de venta de zapatos) entre otros. También surgieron alrededor del comercio electrónico, otros servicios útiles para usuarios y vendedores, como Paypal\footnote{https://www.paypal.com/es/home} (plataforma de pago \textit{online}) o AdWords\footnote{https://adwords.google.com/home/} de Google, para publicitar los productos y servicios a través de Internet, de manera dirigida al usuario con interés.\\
+El comercio electrónico tal y como lo conocemos hoy, consiste en la compra y venta de productos o servicios a través de medios electrónicos, como por ejemplo Internet. Con la llegada en masa de la red de redes a los hogares del mundo, se creó un nicho de mercado que en ese entonces estaba desaprovechado, como es el negocio de la venta \textit{online}. Aunque anteriormente ya existían otros sistemas de comercio electrónico, basados en televisión, teléfono o incluso a través de Internet, no fue hasta la llegada de Amazon\footnote{https://www.amazon.es/} o eBay\footnote{http://www.ebay.com/} cuando el comercio \textit{online} empezó a masificarse.
+A partir de este punto clave y, viendo el éxito que supone para un comercio satisfacer la demanda creciente de clientes de comercio electrónico, surgieron cada vez más plataformas que ofertaban productos y servicios por Internet, como Netflix\footnote{https://www.netflix.com/es/} (en sus inicios un servicio de alquiler de DVD con un sistema de reparto a domicilio), Alibaba.com\footnote{https://www.alibaba.com/} (parecido a Amazon pero para el mercado chino) y Zappos\footnote{http://www.zappos.com/} (plataforma de venta de zapatos) entre otros. También surgieron alrededor del comercio electrónico, otros servicios útiles para usuarios y vendedores, como Paypal\footnote{https://www.paypal.com/es/home} (plataforma de pago \textit{online}) o AdWords\footnote{https://adwords.google.com/home/} de Google, para publicitar los productos y servicios a través de Internet, de manera dirigida al usuario con interés.\\
 
 Al principio sólo las grandes empresas podían permitirse aumentar su visibilidad \textit{online} mediante el uso de caras soluciones personalizadas, sin embargo, poco a poco, fueron surgiendo plataformas mucho más asequibles para el pequeño comercio como pueden ser osCommerce\footnote{https://www.oscommerce.com/}, Magento\footnote{https://magento.com/}, o PrestaShop\footnote{https://www.prestashop.com/es}, o Shopify\footnote{https://www.shopify.es/}, además de soluciones gratuitas basadas en \textit{frameworks} de \textit{software} genéricos como Drupal, Joomla o Wordpress que poseen extensiones para comercio electrónico.
 
@@ -21,31 +21,31 @@ Existen muchas soluciones de generación de PDF, tanto a nivel de \textit{back-en
 También existen soluciones estándar, Chrome, por ejemplo, permite convertir una página web a PDF, pero está limitado por la calidad del trabajo que el maquetador web haya realizado con el archivo print.css, en el que se guardan las reglas de estilo a la hora de imprimir las diferentes páginas de la web. De nuevo, la modificación de este archivo requiere conocimientos avanzados de maquetación web y no suele ser fácil conseguir que una página se imprima como de la forma deseada, además de que habría que ocultar elementos sobrantes, como publicidad y menús.\\
 
 \section {Propuesta}
-A partir de lo elaborado en la introducción, motivación y objetivos, se propone por tanto la realización de un módulo para una de las plataformas libres de comercio electrónico más utilizadas como es Ubercart para Drupal que permita a un administrador la gestión de plantillas para generación de PDF de productos del catálogo que el comercio tenga a la venta.
+A partir de lo elaborado en la introducción, motivación y objetivos, se propone por tanto, la realización de un módulo para una de las plataformas libres de comercio electrónico más utilizadas, como es Ubercart para Drupal, que permita a un administrador la gestión de plantillas para generación de PDF de productos del catálogo que el comercio tenga a la venta.
 
 \subsection{Requisitos funcionales}
-El módulo deberá implementar la siguiente funcionalidad:
+De manera resumida, el módulo deberá implementar la siguiente funcionalidad:
 \begin{itemize}
-	\item Botón de generación de PDF: Un usuario debe ser capaz de generar un documento PDF de un producto con tan sólo pulsar un botón.
-	\item Administración de plantillas: Un administrador puede acceder a una sección de administración de plantillas, protegida por privilegios especiales.
-	\item Creación de plantillas: Un administrador puede crear plantillas nuevas proporcionando un nombre de plantilla y un tipo.
-	\item Borrado de plantillas: Un administrador puede borrar plantillas antiguas para no sobrecargar la base de datos.
-	\item Activado de plantillas: Un administrador puede activar una plantilla para ser usada en la generación de PDF.
-	\item Editado de plantillas: Un administrador puede editar las plantillas entrando en una pantalla de edición en la que se muestran diferentes opciones.
-	\item Mover elementos de una plantilla: Un administrador en modo de edición de plantilla puede mover los elementos y posicionarlos dónde desee.
-	\item Cambiar tamaño de elementos: Un administrador en modo de edición de plantilla puede cambiar el tamaño de los elementos de la misma.
-	\item Cambiar tamaño de fuente: Un administrador en modo de edición de plantilla puede cambiar el tamaño de fuente de los elementos de la misma.
-	\item Botón de guardar cambios de plantilla: Un administrador en modo de edición de plantilla puede pulsar un botón para guardar los cambios de la misma.
+	\item Botón de generación de PDF: un usuario debe ser capaz de generar un documento PDF de un producto con tan sólo pulsar un botón.
+	\item Administración de plantillas: un administrador puede acceder a una sección de administración de plantillas, protegida por privilegios especiales.
+	\item Creación de plantillas: un administrador puede crear plantillas nuevas proporcionando un nombre de plantilla y un tipo.
+	\item Borrado de plantillas: un administrador puede borrar plantillas antiguas para no sobrecargar la base de datos.
+	\item Activado de plantillas: un administrador puede activar una plantilla para ser usada en la generación de PDF.
+	\item Editado de plantillas: un administrador puede editar las plantillas entrando en una pantalla de edición en la que se muestran diferentes opciones.
+	\item Mover elementos de una plantilla: un administrador en modo de edición de plantilla puede mover los elementos y posicionarlos dónde desee.
+	\item Cambiar tamaño de elementos: un administrador en modo de edición de plantilla puede cambiar el tamaño de los elementos de la misma.
+	\item Cambiar tamaño de fuente: un administrador en modo de edición de plantilla puede cambiar el tamaño de fuente de los elementos de la misma.
+	\item Botón de guardar cambios de plantilla: un administrador en modo de edición de plantilla puede pulsar un botón para guardar los cambios de la misma.
 \end{itemize}
 
 \subsection{Requisitos no funcionales}
 El módulo deberá cumplir los siguientes requisitos no funcionales
 \begin{itemize}
-	\item Uso de tecnologías de libre distribución: Las tecnologías usadas para el desarrollo del módulo deben ser de libre distribución.
-	\item Módulo exportable: El módulo desarrollado debe poderse instalar en otras instalaciones de Drupal que cumplan los requisitos y dependencias.
-	\item Stack tecnológico: Uso de \acs{WAMP} o \acs{LAMP}.
+	\item Uso de tecnologías de libre distribución: las tecnologías usadas para el desarrollo del módulo deben ser de libre distribución.
+	\item Módulo exportable: el módulo desarrollado debe poderse instalar en otras instalaciones de Drupal que cumplan los requisitos y dependencias.
+	\item Stack tecnológico: uso de \acs{WAMP} o \acs{LAMP}.
 	\item Uso de Drupal: Drupal tiene a su disposición varios módulos que expanden su funcionalidad para satisfacer las necesidades de los propietarios de tiendas on-line.
-	\item Uso de Ubercart: Dentro de las opciones de comercio electrónico disponibles para Drupal, debe usarse la extensión de Ubercart.
+	\item Uso de Ubercart: dentro de las opciones de comercio electrónico disponibles para Drupal, debe usarse la extensión de Ubercart.
 	\item JSON para comunicaciones entre \textit{back-end} y \textit{front-end}.
 	\item Uso de Angularjs para el \textit{front-end}.
 \end{itemize}
@@ -60,7 +60,7 @@ Los lenguajes de programación usados para el desarrollo del proyecto aparecen ex
 
 \subsubsection{HTML}
 El lenguaje \ac{HTML} sirve principalmente para la publicación y estructuración de documentos y especificación de hipervínculos. Junto a \ac{CSS} y Javascript, forman la base de la programación web actual. Es un lenguaje basado en etiquetas y todo el contenido de un documento está almacenado entre una etiqueta de apertura y otra de cierre.
-La primera descripción pública de \ac{HTML} fue un documento llamado ``HTML Tags'' publicado por Tim Berners-Lee a finales de 1991 y describe los primeros 18 elementos incluidos en el lenguaje\cite{htmlTags}. Durante todo este tiempo se han ido publicando nuevas versiones de \ac{HTML} en las que se añadían nuevas etiquetas y se eliminaban otras obsoletas. La versión actual es \ac{HTML}5 que añade múltiples etiquetas avanzadas para controles multimedia, validaciones de formularios y maquetación de páginas web optimizadas para buscadores.\\
+La primera descripción pública de \ac{HTML} fue un documento llamado ``HTML Tags'' publicado por Tim Berners-Lee a finales de 1991 y describe los primeros 18 elementos incluidos en el lenguaje \cite{htmlTags}. Durante todo este tiempo se han ido publicando nuevas versiones de \ac{HTML} en las que se añadían nuevas etiquetas y se eliminaban otras obsoletas. La versión actual es \ac{HTML}5 que añade múltiples etiquetas avanzadas para controles multimedia, validaciones de formularios y maquetación de páginas web optimizadas para buscadores.\\
 
 Para programar en HTML basta con usar un editor de texto cualquiera y un navegador web para ver la página web interpretada desde el código escrito. La extensión de un documento HTML es ``.html'' o ``.htm''.
 
@@ -70,9 +70,7 @@ Ejemplo:
     <!-- Muestra una página web con el título "Ejemplo"
     y el texto "!Hola Mundo!" -->
     <html>
-      <head>
-        <title>Ejemplo</title>
-      </head>
+      <head><title>Ejemplo</title></head>
       <body>
         <p>¡Hola, Mundo!</p>
       </body>
@@ -81,7 +79,7 @@ Ejemplo:
 
 \subsubsection {CSS}
 \ac{CSS} es el acrónimo de \textit{Cascale Style Sheets} el cuál es un lenguaje de estilo usado para describir la presentación de un lenguaje basado en etiquetas o marcas como HTML. Su diseño está enfocado principalmente a separar la presentación del contenido del documento, incluyendo aspectos como la estructura, colores y fuentes. Las especificaciones \ac{CSS} son mantenidas por el \ac{W3C}.
-La primera propuesta de \ac{CSS} la realizó Håkon Wium Lie en 1994\cite{Hak94} y a pesar de que en el momento habían más propuestas de lenguajes de estilo, \ac{CSS} se impuso y acabó siendo lanzado en 1996 por el W3C\cite{W3cCSS}. El lenguaje tuvo unos inicios complicados ya que los navegadores inicialmente ofrecían soporte muy limitado para \ac{CSS}. No fue sino hasta la versión 5 de Internet Explorer que se dio soporte a la totalidad del lenguaje\cite{Bert94}, y aun así muchos otros navegadores seguían ofreciendo compatibilidades limitadas. Actualmente la especificación \ac{CSS} utilizada es la 3, aunque a partir de esta versión, el lenguaje se partió en módulos y se puede hacer uso de algunos de la especificación 4.\\
+La primera propuesta de \ac{CSS} la realizó Håkon Wium Lie en 1994 \cite{Hak94} y a pesar de que en el momento habían más propuestas de lenguajes de estilo, \ac{CSS} se impuso y acabó siendo lanzado en 1996 por el W3C \cite{W3cCSS}. El lenguaje tuvo unos inicios complicados ya que los navegadores inicialmente ofrecían soporte muy limitado para \ac{CSS}. No fue sino hasta la versión 5 de Internet Explorer que se dio soporte a la totalidad del lenguaje \cite{Bert94}, y aun así muchos otros navegadores seguían ofreciendo compatibilidades limitadas. Actualmente la especificación \ac{CSS} utilizada es la 3, aunque a partir de esta versión, el lenguaje se partió en módulos y se puede hacer uso de algunos de la especificación 4.\\
 
 Al igual que con HTML, para programar en CSS basta con un programa editor de texto y un navegador web. Es un lenguaje ligado a HTML y puede aparecer o bien incrustado en el mismo documento ``.html'' o bien en su propio archivo ``.css'' que luego es importado al documento web.
 
@@ -99,7 +97,7 @@ Ejemplo:
 
 \subsubsection {Javascript}
 Javascript es un lenguaje de programación de alto nivel creado originalmente en el año 1995 para ser un lenguaje de \textit{scripting} complementario a los navegadores web. Inicialmente se le dio el nombre de Mocha en su fase de desarrollo, aunque luego su nombre cambió a LiveScript para más tarde ser reemplazado por Javascript en su lanzamiento junto a Netscape Navigator 2.0. Se cree que se le dio este nombre para aprovechar la popularidad de Java.
-Un año después fue adoptado por Microsoft bajo el nombre de JScript para evitar problemas legales de nomenclatura y más tarde fue estandarizado por ECMA Internacional lanzando la especificación de lenguaje ECMAScript\cite{News95,Marc08}.
+Un año después fue adoptado por Microsoft bajo el nombre de JScript para evitar problemas legales de nomenclatura y más tarde fue estandarizado por ECMA Internacional lanzando la especificación de lenguaje ECMAScript \cite{News95,Marc08}.
 Las especificaciones de ECMAScript se han ido adaptando a los tiempos modernos, añadiendo nuevas funcionalidades y corrigiendo otras. Actualmente se trabaja mucho con la especificación ECMAScript 5, aunque la especificación 6 está ganando popularidad desde su salida en el año 2015 y sobre todo por la adopción de la misma por los desarrolladores de los \textit{frameworks} y librerías más populares como Angularjs, Reactjs y Babel.\\
 
 Javascript es un lenguaje dinámico, sin tipado e interpretado en tiempo de ejecución. Es un lenguaje con múltiples paradigmas: funcional, imperativo e incluso en las últimas especificaciones, integra orientación a objetos.\\
@@ -109,17 +107,17 @@ Es posible incrustar \textit{scripts} de Javascript en un documento HTML o bien 
 
 Ejemplo:
 \begin{verbatim}
-	// Muestra en la consola de desarrollo del navegador web el
-	// mensaje "¡Hola Mundo!"
+    // Muestra en la consola de desarrollo del navegador web el
+    // mensaje "¡Hola Mundo!"
     function hello() {
       console.log("!Hola Mundo!");
     }
 \end{verbatim}
 
 \subsubsection{PHP}
-PHP es un lenguaje de scripting para \textit{back-end} diseñado principalmente para diseño web, pero que es utilizado también como lenguaje de propósito general. Fue creado en el año 1995 por Rasmus Lerdorf quien escribió unas aplicaciones de consola en C para mantener su página web personal\cite{Ras07}. Posteriormente las amplió para funcionar con WebForms y comunicarlas con bases de datos y lo llamó ``\textit{Personal Home Page/Forms Interpreter}'' o PHP/FI. Inicialmente no fue concebido para ser un lenguaje de programación, pero Lerdorf fue paulatinamente añadiendo funcionalidades hasta que se formó un equipo de desarrollo, lanzando su primera versión oficial en 1997.\cite{Ras03}\\
+PHP es un lenguaje de scripting para \textit{back-end} concebido principalmente para diseño web, pero que es utilizado también como lenguaje de propósito general. Fue creado en el año 1995 por Rasmus Lerdorf quien escribió unas aplicaciones de consola en C para mantener su página web personal \cite{Ras07}. Posteriormente las amplió para funcionar con WebForms y comunicarlas con bases de datos y lo llamó ``\textit{Personal Home Page/Forms Interpreter}'' o PHP/FI. Inicialmente no fue concebido para ser un lenguaje de programación, pero Lerdorf fue paulatinamente añadiendo funcionalidades hasta que se formó un equipo de desarrollo, lanzando su primera versión oficial en 1997 \cite{Ras03}.\\
 
-Durante su tiempo de vida, el lenguaje ha recibido numerosas actualizaciones. Actualmente se encuentra en la séptima iteración de PHP, con la salida de la versión 7.2 programada para noviembre de 2017.\cite{PHP17}\\
+Durante su tiempo de vida, el lenguaje ha recibido numerosas actualizaciones. Actualmente se encuentra en la séptima iteración de PHP, con la salida de la versión 7.2 programada para noviembre de 2017 \cite{PHP17}.\\
 
 Es un lenguaje orientado objetos pero que nos permite utilizar varios paradigmas de programación como el estructurado, imperativo, funcional y reflexivo.
 Como suele ocurrir con los lenguajes de \textit{scripting}, PHP es un lenguaje interpretado, es decir, no requiere de compilación previa para su ejecución. Además es de tipado dinámico, por lo que las variables no están asociadas a un tipo de datos en el momento de su declaración, sino que se les asigna un tipo automáticamente en el momento de su uso.\\
@@ -146,7 +144,7 @@ Ejemplo:
 
 \subsubsection {JSON}
 \ac{JSON} se trata de un estándar abierto de formato de archivo para el envío de información a través de pares clave-valor. Es muy utilizado hoy en día para las comunicaciones entre cliente y servidor.
-La primera especificación de JSON vino de la mano de Douglas Crockford quien lo creó originariamente para ser un subconjunto de Javascript\cite{Mag11}. De hecho es actualmente muy utilizado junto a este lenguaje, sin embargo, JSON es independiente del lenguaje con el que sea usado. En el año 2013 se estableció un estándar por ECMA Internacional.\\
+La primera especificación de JSON vino de la mano de Douglas Crockford quien lo creó originariamente para ser un subconjunto de Javascript \cite{Mag11}. De hecho es actualmente muy utilizado junto a este lenguaje, sin embargo, JSON es independiente del lenguaje con el que sea usado. En el año 2013 se estableció un estándar por ECMA Internacional.\\
 
 Los tipos de datos que pueden ser usados en un documento JSON son: Boolean, String, Number, Array, Object y null.
 
@@ -182,26 +180,26 @@ Ejemplo:
 En esta sección se hace una recopilación de los \textit{frameworks} y librerías de terceros usados durante el desarrollo del proyecto y sus características.
 
 \subsubsection {Drupal}
-Drupal es un sistema de gestión de contenidos (o \ac{CMS} según sus siglas en inglés derivadas de \textit{Content Management System}) de código abierto que es utilizado por un 2,3\% de sitios web del mundo\cite{W3t17}. Es un sistema libre, modular y multipropósito que permite publicar artículos, imágenes, archivos y que también ofrece la posibilidad de otros servicios añadidos como foros, encuestas, votaciones, blogs y administración de usuarios y permisos. Es un sistema de carga dinámico, es decir, todos los recursos se almacenan en una base de datos y se cargan en tiempo real a la hora de generar una página. Este CMS está escrito utilizando el lenguaje PHP valiéndose de las librerías de Symfony, por lo que es un sistema multiplataforma soportado tanto por Windows como por sistemas Unix.\\
+Drupal es un sistema de gestión de contenidos (o \ac{CMS} según sus siglas en inglés derivadas de \textit{Content Management System}) de código abierto que es utilizado por un 2,3\% de sitios web del mundo \cite{W3t17}. Es un sistema libre, modular y multipropósito que permite publicar artículos, imágenes, archivos y que también ofrece la posibilidad de otros servicios añadidos como foros, encuestas, votaciones, blogs y administración de usuarios y permisos. Es un sistema de carga dinámico, es decir, todos los recursos se almacenan en una base de datos y se cargan en tiempo real a la hora de generar una página. Este CMS está escrito utilizando el lenguaje PHP valiéndose de las librerías de Symfony, por lo que es un sistema multiplataforma soportado tanto por Windows como por sistemas Unix.\\
 
-Originalmente fue escrito por Dries Buytaert como un foro de opinión. En el año 2001 se convirtió en un proyecto de código abierto y ganó popularidad en 2004 al utilizarse para crear el sitio \textit{DeanSpace} para el candidato a las primarias por el Partido Demócrata de Estados Unidos Howard Dean.\cite{Ben11}\\
+Originalmente fue escrito por Dries Buytaert como un foro de opinión. En el año 2001 se convirtió en un proyecto de código abierto y ganó popularidad en 2004 al utilizarse para crear el sitio \textit{DeanSpace} para el candidato a las primarias por el Partido Demócrata de Estados Unidos Howard Dean \cite{Ben11}.\\
 
-Actualmente Drupal se encuentra en la versión 8, aunque aún brinda soporte a la versión 7 que cuenta con muchos adeptos. La mayoría de los módulos y temas de Drupal desarrollados por sus usuarios son compatibles con la versión 7.\\
+Actualmente Drupal se encuentra en la versión 8, aunque aún brinda soporte a la versión 7 que cuenta aún con muchos adeptos. La mayoría de los módulos y temas de Drupal desarrollados por sus usuarios son compatibles con la versión 7.\\
 
 Algunos ejemplos de sitios desarrollados con Drupal son las webs de Ubuntu, Intel o Economist, entre otros.
 
 \subsubsection {Angularjs}
-Angularjs es un \textit{framework} para aplicaciones web de código abierto basado en Javascript especializado en \textit{\ac{SPA}}. Actualmente está soportado por Google y una comunidad formada por desarrolladores individuales y empresas. Fue inicialmente programado en el año 2009 por Miko Hevery como un \textit{software} base para una aplicación \textit{online} de almacenamiento de datos en JSON\cite{Misk09}, aunque debido al pobre acogimiento que tuvo la idea, el producto se desechó y se lanzo Angular como una librería de código abierto. Inicialmente todo el contenido de Angularjs iba en un único paquete pero en las versiones más recientes, se ha modularizado para que cada desarrollador tenga una instalación personalizada de acuerdo a sus necesidades.\\
+Angularjs es un \textit{framework} para aplicaciones web de código abierto basado en Javascript especializado en \textit{\ac{SPA}}. Actualmente es mantenido por Google y una comunidad formada por desarrolladores individuales y empresas. Fue inicialmente programado en el año 2009 por Miko Hevery como un \textit{software} base para una aplicación \textit{online} de almacenamiento de datos en JSON \cite{Misk09}, aunque debido al pobre acogimiento que tuvo la idea, el producto se desechó y se lanzo Angular como una librería de código abierto. Inicialmente todo el contenido de Angularjs iba en un único paquete pero en las versiones más recientes, se ha modularizado para que cada desarrollador tenga una instalación personalizada de acuerdo a sus necesidades.\\
 
-Actualmente se dispone de dos vertientes de Angularjs, la versión 1.x y la versión 2.x. Aunque compartan el nombre, la Angularjs 2.x no se trata de la siguiente iteración del \textit{framework}, si no que se trata de un remodelado completo incompatible con la versión anterior, por lo que se tratan como si fueran dos librerías diferentes y ambos continúan recibiendo soporte.\\
+Actualmente se dispone de dos vertientes de Angularjs, la versión 1.x y la versión 2.x. Aunque compartan el nombre, la Angularjs 2.x no se trata de la siguiente iteración del \textit{framework}, si no que se trata de un remodelado completo incompatible con la versión anterior, por lo que se tratan como si fueran dos librerías diferentes y ambas continúan recibiendo soporte.\\
 
-El \textit{framework} se basa en el modelo vista presentador con lo que proporciona ficheros de vista (\ac{HTML}), un modelo de datos y un presentador (controlador). Cada vez que Angularjs detecta un cambio de estado, ejecuta un proceso que chequea a cuantos ámbitos (\textit{scopes}) puede afectar dicho cambio de estado y busca todas las variables que hayan podido sufrir cambios para actualizar las vista. Este proceso de chequeo se llama ciclo de digest y constituye el núcleo del funcionamiento de Angularjs. También al cambiar un valor en una vista se actualiza la variable asociada en el controlador (\textit{two-way data binding}). Angular está compuesto por módulos y directivas, y los desarrolladores pueden crear sus propios elementos y compartirlos con otros a través de repositorios públicos.\\
+El \textit{framework} se basa en el modelo vista presentador con lo que proporciona ficheros de vista (\ac{HTML}), un modelo de datos y un presentador (controlador). Cada vez que Angularjs detecta un cambio de estado, ejecuta un proceso que chequea a cuantos ámbitos (\textit{scopes}) puede afectar dicho cambio de estado y busca todas las variables que hayan podido sufrir cambios para actualizar sus vistas. Este proceso de chequeo se llama ciclo de digest y constituye el núcleo del funcionamiento de Angularjs. También al cambiar un valor en una vista se actualiza la variable asociada en el controlador (\textit{two-way data binding}). Angular está compuesto por módulos y directivas, y los desarrolladores pueden crear sus propios elementos y compartirlos con otros a través de repositorios públicos.\\
 
 En este proyecto se usa la versión 1.6 del \textit{framework}. Algunos sitios desarrollados con Angular son Wolfram Alpha, ABC News o NBC
 
 \subsubsection {JQuery}
 \FloatBarrier
-Es una librería de Javascript diseñada para simplificar la programación en el lado del cliente. Es de código abierto y es la librería más usada de Javascript\cite{W3tJquery17}. Fue lanzado en el año 2006 por John Resig quien se inspiró en las librerías de cssQuery.\cite{Joh07}\\
+Es una librería de Javascript diseñada para simplificar la programación en el lado del cliente. Es de código abierto y es la librería más usada de Javascript \cite{W3tJquery17}. Fue lanzado en el año 2006 por John Resig quien se inspiró en las librerías de cssQuery \cite{Joh07}.\\
 
 Principalmente contiene funciones para manipular el \ac{DOM} que es un conjunto estándar de objetos para representar documentos HTML, y una interfaz estándar para acceder a ellos y manipularlos. También permite realizar animaciones, gestionar eventos y desarrollar aplicaciones basadas en Ajax. Sus principales características son las siguientes:
 \begin{itemize}  
@@ -238,12 +236,12 @@ Al ser compatible con JsPDF permite la generación de un documento PDF en modo im
 En esta sección se enumeran los sistemas principales del \textit{back-end} sobre los que se monta la aplicación.
 
 \subsubsection {Apache HTTP Server}
-Llamado coloquialmente Apache, es un servidor web multiplataforma de código abierto. La Apache Software Foundation\footnote{https://www.apache.org/} es la encargada actualmente de dar soporte y programación del producto. Su desarrollo comenzó en el año 1995 y jugó un papel importante en el crecimiento de la World Wide Web sustituyendo rápidamente a NCSA HTTPd como servidor \ac{HTTP} dominante en el mercado. Actualmente es el servidor más utilizado del mundo siendo utilizado por un 46\% de los sitios web en activo.\cite{Net16}\\
+Llamado coloquialmente Apache, es un servidor web multiplataforma de código abierto. La Apache Software Foundation\footnote{https://www.apache.org/} es la encargada actualmente de dar soporte y programación del producto. Su desarrollo comenzó en el año 1995 y jugó un papel importante en el crecimiento de la World Wide Web sustituyendo rápidamente a NCSA HTTPd como servidor \ac{HTTP} dominante en el mercado. Actualmente es el servidor más utilizado del mundo siendo utilizado por un 46\% de los sitios web en activo \cite{Net16}.\\
 
 Entre sus principales características se encuentra el soporte para lenguajes de programación como Perl, Python, Tcl y PHP, módulos de autenticación (mod\_access, mod\_auth, mod\_digest y mod\_auth\_digest), soporte para SSL y TLS, hosting virtual, y autenticación por contraseña o firma digital entre otros.
 
 \subsubsection {MySQL}
-MySQL es un sistema gestor de base de datos relacionales de código abierto creado por la compañía sueca MYSQL AB en el año 1995\cite{Bob09}. Durante este tiempo MySQL fue ganando popularidad y en el año 2008 fue comprado por Sun Microsystems para posteriormente pasar a manos de Oracle, actuales propietarios. Antes de la adquisición por parte de Oracle, uno de los creadores y fundadores de MYSQL AB, Monty Widenius, realizó un fork de la versión 5.5 de MySQL para crear MariaDB y mantener la esencia del producto.\cite{Mon09}\\
+MySQL es un sistema gestor de base de datos relacionales de código abierto creado por la compañía sueca MYSQL AB en el año 1995 \cite{Bob09}. Durante este tiempo MySQL fue ganando popularidad y en el año 2008 fue comprado por Sun Microsystems para posteriormente pasar a manos de Oracle, actuales propietarios. Antes de la adquisición por parte de Oracle, uno de los creadores y fundadores de MYSQL AB, Monty Widenius, realizó un fork de la versión 5.5 de MySQL para crear MariaDB y mantener la esencia del producto \cite{Mon09}.\\
 
 Actualmente MySQL se encuentra en la versión 5.7 y se ofrece tanto la versión MySQL Community Server como Enterprise Server, siendo ésta última una licencia de pago. Aunque MySQL server ha evolucionado para poder albergar y tratar volúmenes altos de datos, se sigue utilizando principalmente para aplicaciones de pequeño a mediano tamaño.\\
 
@@ -277,8 +275,8 @@ Sus principales características son:
 
 \subsubsection {Git}
 Es un sistema de control de versiones cuya función principal es la de mantener un registro de cambios locales realizados en un directorio y coordinar el trabajo sobre esos archivos entre un grupo de gente. Se usa mayoritariamente como gestión de código a la hora de desarrollar \textit{software} de manera distribuida.
-Fue creado por Linus Torvalds en el año 2005 para el desarrollo del \textit{kernel} de Linux con la finalidad de coordinar el trabajo con otros desarrolladores.\cite{Git14} A Torvalds no le convencían otros sistemas de control de versiones disponibles.
-Una de las características de Git es que cada directorio de Git en cada ordenador es un repositorio completo con histórico y rastreo de versiones independiente de cualquier servidor central. Esto hace posible que, en caso de perderse el repositorio remoto, este se pueda rehacer desde uno perteneciente a los desarrolladores.
+Fue creado por Linus Torvalds en el año 2005 para el desarrollo del \textit{kernel} de Linux con la finalidad de coordinar el trabajo con otros desarrolladores \cite{Git14}. A Torvalds no le convencían otros sistemas de control de versiones disponibles.
+Una de las características de este sistema es que cada directorio de Git en cada ordenador es un repositorio completo con histórico y rastreo de versiones independiente de cualquier servidor central. Esto hace posible que, en caso de perderse el repositorio remoto, este se pueda rehacer desde uno perteneciente a los desarrolladores.
 Sus principales características son:
 \begin{itemize}  
 \item Soporte para desarrollo no lineal
