--- a/Memoria/plantilla_PFC.tex
+++ b/Memoria/plantilla_PFC.tex
@@ -5,7 +5,7 @@
 \documentclass[twosides,a4paper,12pt]{book}
 
 \usepackage[dvips]{graphicx}
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 %\selectlanguage{spanish}
 %\usepackage[T1]{fontenc}
 \usepackage[latin1]{inputenc}
